hot-fix/scroll overflow in armor list

--- a/styles.css
+++ b/styles.css
@@ -261,7 +261,7 @@ button:hover, .upload_label:hover {
     width: 130px;
     height: auto;
     overflow-y: scroll;
-    /*background-color: rgba(10, 10, 44, 0.78);*/
+    max-height: 500px;
 }
 
 .list::-webkit-scrollbar {
@@ -284,7 +284,7 @@ button:hover, .upload_label:hover {
 
 
 .gradient {
-    height: 370px;
+    height: 500px;
     width: 10px;
     background: linear-gradient(red,yellow, #02ff02);
     border: 5px solid var(--main-bg-color);
